# Go

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: bot.yaml  carbon.yaml  grpc_streamer.yaml
crates/carbon-indexer/: Cargo.toml
crates/carbon-indexer/src/: main.rs
crates/grpc-streamer/: Cargo.toml  build.rs
crates/grpc-streamer/proto/: yellowstone.proto
crates/grpc-streamer/src/: lib.rs  main.rs  streamer.rs
crates/hft-bot/: Cargo.toml
crates/hft-bot/src/: main.rs
crates/openclaw-config/: Cargo.toml
crates/openclaw-config/src/: lib.rs
crates/openclaw-telemetry/: Cargo.toml
crates/openclaw-telemetry/src/: lib.rs
docker/carbon-indexer/: Dockerfile
docker/grpc-streamer/: Dockerfile
docker/hft-bot/: Dockerfile
