[package]
name    = "grpc-streamer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-streamer"
path = "src/main.rs"

[dependencies]
openclaw-config    = { path = "../openclaw-config" }
openclaw-telemetry = { path = "../openclaw-telemetry" }
anyhow             = { workspace = true }
tokio              = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
serde              = { workspace = true }
dotenvy            = { workspace = true }
tokio-stream       = "0.1"
tracing            = { workspace = true }
thiserror          = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
