[package]
name    = "hft-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hft-bot"
path = "src/main.rs"

[dependencies]
openclaw-config    = { path = "../openclaw-config" }
openclaw-telemetry = { path = "../openclaw-telemetry" }
anyhow             = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }
metrics            = { workspace = true }
dotenvy            = { workspace = true }
