[package]
name    = "openclaw-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow                       = { workspace = true }
tracing                      = { workspace = true }
tracing-subscriber           = { workspace = true }
metrics                      = { workspace = true }
metrics-exporter-prometheus  = { workspace = true }
thiserror                    = { workspace = true }
